<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/addItem"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        android:contentDescription="@string/content_description_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/confirm"
        android:icon="@drawable/ic_done"
        android:title="@string/confirm"
        android:contentDescription="@string/content_description_confirm"
        app:showAsAction="ifRoom" />
</menu>